--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <p>Matt Scaggs<br><span>Instructional Designer</span></p>
     </header>
 
     <div class="container">
       <div class="hero">
-        <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
+        <strong>I love designing courses!</strong> Here are a few recent projects I've worekd on.<br> Contact me: matt dot scaggs at gmail dot com
       </div>
 
       <div class="content">
