--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="container">
       <div class="hero">
-        <strong>I love designing courses!</strong> Here are a few recent projects I've worekd on.<br> Contact me: matt dot scaggs at gmail dot com
+        <strong>I love designing courses!</strong> Here are some of the things I've been working on recently.<br> Contact me: matt dot scaggs at gmail dot com
       </div>
 
       <div class="content">
