--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Matt Scaggs: Portfolio</title>
 
     <!-- using WebFontLoader, doc: https://github.com/typekit/webfontloader -->
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
-      <script>
+    <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+      <script async>
         WebFont.load({
           google: {
             families: ['Open Sans:400,700']
