--- a/index.html
+++ b/index.html
@@ -7,16 +7,6 @@
     <meta name="author" content="Matt Scaggs">
     <title>Matt Scaggs: Portfolio</title>
 
-    <!-- using WebFontLoader, doc: https://github.com/typekit/webfontloader -->
-    <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
-      <script async>
-        WebFont.load({
-          google: {
-            families: ['Open Sans:400,700']
-          }
-        });
-      </script>
-
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet" media="print">
 
@@ -73,6 +63,16 @@
 
     <footer>
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+      <!-- shifted font to footer -->
+      <!-- using WebFontLoader, doc: https://github.com/typekit/webfontloader -->
+      <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+      <script async>
+        WebFont.load({
+          google: {
+            families: ['Open Sans:400,700']
+          }
+        });
+      </script>
     </footer>
   </body>
 </html>
