--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Matt Scaggs: Portfolio</title>
 
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet" media="print" max-age=600>
+    <link href="css/print.css" rel="stylesheet" media="print">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
