--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       .hero{padding:2em;background-color:#f8f8f8;font-size:1.2em;border-bottom:1px solid #ccc;border-top:1px solid #ccc;}
       .content{padding:1em 1em;}
       .content li{list-style-type:none;font-size:1.1em;}
-      li img{float:left;padding-right:1em;}
+      li{padding:1em 0 5em 0;}
+      li img{float:left;padding: 0 1em 0 0;}
       li p{font-size:0.9em;font-style:italic;}
       footer{padding:0 0.5em;border-top:1px solid #ccc;}
       footer span{float:right;font-style:italic;}
@@ -58,31 +59,32 @@
 
     <div class="container">
       <div class="hero">
-        <strong>I love designing courses!</strong> Here are some of the things I've been working on recently.<br> Contact me: matt dot scaggs at gmail dot com
+        <strong>I love designing courses!</strong> Here are some of the things I've been working on recently.<br><br> Contact me: matt dot scaggs at gmail dot com
       </div>
 
       <div class="content">
         <ul>
+
           <li>
-            <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
-            <a href="project-2048.html">Build Your Own 2048!</a>
-            <p>I made my own version of 2048. How cool is that!?</p>
+            <img src="img/tictactoe_sm.png">
+            <a href="project-mobile.html">Training Strategy</a>
+            <p>Partnered with a new company on the approach for onboarding and continuation training for their employeees.</p>
           </li>
 
           <li>
-            <img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100">
-            <a href="project-webperf.html">Website Performance Optimization</a>
-            <p>Hey... this class looks familiar.</p>
+            <img src="img/wbtLong_sm.png">
+            <a href="project-2048.html">eLearning</a>
+            <p>Recent web based training course developed and deployed for mobile and desktop users.</p>
           </li>
 
           <li>
-            <img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
-            <a href="project-mobile.html">Mobile Web Development</a>
-            <p>Making mobile apps isn't so hard after all.</p>
+            <img src="img/opsLong_sm.png">
+            <a href="project-webperf.html">Offering Personalized Solutions</a>
+            <p>I led a team in designing and deploying the first paperless classroom training for 40,000 frontline retail employees.</p>
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria.jpg">
+            <img style="width: 200px;" src="views/images/pizzeria.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
