rename project pages, update index.html
personalizing to projects

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="container">
       <div class="hero">
-        <strong>I love designing courses!</strong> Here are some of the things I've been working on recently.<br><br> Contact me: matt dot scaggs at gmail dot com
+        <strong>I dig designing and developing courses!</strong> Here are some of the things I've been working on recently.<br><br> Contact me: matt dot scaggs at gmail dot com
       </div>
 
       <div class="content">
@@ -67,19 +67,19 @@
 
           <li>
             <img src="img/tictactoe_sm.png">
-            <a href="project-mobile.html">Training Strategy</a>
+            <a href="project-strategy.html">Training Strategy</a>
             <p>Partnered with a new company on the approach for onboarding and continuation training for their employeees.</p>
           </li>
 
           <li>
             <img src="img/wbtLong_sm.png">
-            <a href="project-2048.html">eLearning</a>
+            <a href="project-wbts.html">eLearning</a>
             <p>Recent web based training course developed and deployed for mobile and desktop users.</p>
           </li>
 
           <li>
             <img src="img/opsLong_sm.png">
-            <a href="project-webperf.html">Offering Personalized Solutions</a>
+            <a href="project-ops.html">Offering Personalized Solutions</a>
             <p>I led a team in designing and deploying the first paperless classroom training for 40,000 frontline retail employees.</p>
           </li>
 
