--- a/project-strategy.html
+++ b/project-strategy.html
@@ -6,22 +6,10 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Matt Scaggs: Portfolio</title>
-
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
-
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
 
-    <script>
-      (function(w,g){w['GoogleAnalyticsObject']=g;
-      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-
-      // TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y');
-      ga('send', 'pageview');
-    </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
   </head>
 
@@ -33,17 +21,17 @@
 
     <div class="container">
       <div class="hero">
-        Partnered with a new company on the approach for onboarding and continuation training for their employeees.
+        Partnered with <a href="https://www.goenjoy.com/">Enjoy</a> on the approach for onboarding and continuation training for their employeees, plus preparing AT&T employees to support the launch.
       </div>
 
       <div class="content">
 
-        <p>Note to self, next time must take (more) pictures.</p>
+        <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials. For AT&T employees, A web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store. Early results and customer feedback are positive!</p>
 
     </div>
 
     <footer>
-      <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+      <!-- <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p> -->
     </footer>
   </body>
 </html>
