--- a/project-ops.html
+++ b/project-ops.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
+    <meta name="description" content="Portfolio of recent projects">
+    <meta name="author" content="Matt Scaggs">
     <title>Matt Scaggs: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
@@ -13,15 +13,6 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
 
-    <script>
-      (function(w,g){w['GoogleAnalyticsObject']=g;
-      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-
-      // TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y');
-      ga('send', 'pageview');
-    </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
   </head>
 
@@ -38,14 +29,19 @@
 
       <div class="content">
 
-        <p>This approach drove increased product sales and customer satisfaction scores, when comparing employees completing the course vs. those who did not.</p>
+        <p>This one day workshop drove up to 15% increases in product sales and customer satisfaction scores, when comparing employees completing the course to those who did not. Learners enjoyed a mix of activities: hands-on discovery, guided group interactions, and practice sessions with instructor coaching and feedback.</p>
 
-        <img src="img/opsLong.png">
+        <p>The project team included <a href="http://www.linkedin.com/pub/matt-yantzi/97/247/a17">Matt Yantzi</a>, <a href="http://www.linkedin.com/pub/jay-fallon/8/571/b">Jay Fallon</a>, <a href="http://www.linkedin.com/pub/rich-spohnholz/9/8a0/801">Rich Spohnholz</a>, <a href="http://www.linkedin.com/pub/patrick-neff/73/274/343">Patrick Neff</a>, 60+ trainers covering all 50 states, along with executive sponsors and stakeholders from AT&T’s Marketing, Sales Operations and Emerging Devices organizations.
 
+        <p>We used Adobe tools to design, develop and deliver the content to iPads and Android tablets. As shown in the sample screens below, we also had fun including game-like elements and achievements to increase employee engagement with the material.</p>
+
+        <img class="img-responsive" src="img/opsPic1.png"><br><br>
+        <img class="img-responsive" src="img/opsPic2.png"><br><br>
+        <img class="img-responsive" src="img/opsPic3.png"><br><br>
     </div>
 
     <footer>
-      <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+      <!-- <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p> -->
     </footer>
   </body>
 </html>
