--- a/project-wbts.html
+++ b/project-wbts.html
@@ -37,13 +37,12 @@
       </div>
 
       <div class="content">
-
-        <img class="img-responsive" src="img/wbtLong.png">
-
+        <p>Our audience are sales consultants, support reps, and line managers from internal and external retail channels: Company Owned Retail, Dealer, and National Retail. Courses are designed and developed in partnership with stakeholders from the field, marketing, sales operations, and OEMs.</p>
+        <img class="img-responsive" src="img/wbtGroup.png">
     </div>
 
     <footer>
-      <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
+      <!-- <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p> -->
     </footer>
   </body>
 </html>
