minor verbiage tweak

--- a/project-wbts.html
+++ b/project-wbts.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="content">
-        <p>Our audience are sales consultants, support reps, and line managers from internal and external retail channels: Company Owned Retail, Dealer, and National Retail. Courses are designed and developed in partnership with stakeholders from the field, marketing, sales operations, and OEMs.</p>
+        <p>Our audience consists of sales consultants, support reps, and line managers from internal and external retail channels: Company Owned Retail, Dealer, and National Retail. Courses are designed and developed in partnership with stakeholders from the field, marketing, sales operations, and OEMs.</p>
         <img class="img-responsive" src="img/wbtGroup.png">
     </div>
 
