--- a/index.html
+++ b/index.html
@@ -38,16 +38,7 @@
       header p{padding-left:4.5em;}
     </style>
     <link href="css/print.css" rel="stylesheet" media="print">
-    <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
-    <script async>
-        WebFont.load({
-          google: {
-            families: ['Open Sans:400,700']
-          }
-        });
-    </script>
-    <script async src="http://www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   </head>
 
   <body>
