--- a/project-ops.html
+++ b/project-ops.html
@@ -12,9 +12,6 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
-    <style media="screen" type="text/css">
-      .center{margin: auto;}
-    </style>
     <script async src="js/perfmatters.js"></script>
   </head>
 
@@ -37,9 +34,9 @@
 
         <p>We used Adobe tools to design, develop and deliver the content to iPads and Android tablets. As shown in the sample screens below, we also had fun including game-like elements and achievements to increase employee engagement with the material.</p>
 
-        <img class="img-responsive" class="center" src="img/opsPic1.png"><br><br>
-        <img class="img-responsive" class="center" src="img/opsPic2.png"><br><br>
-        <img class="img-responsive" class="center" src="img/opsPic3.png"><br><br>
+        <img class="img-responsive" src="img/opsPic1.png"><br><br>
+        <img class="img-responsive" src="img/opsPic2.png"><br><br>
+        <img class="img-responsive" src="img/opsPic3.png"><br><br>
     </div>
 
     <footer>
