--- a/project-strategy.html
+++ b/project-strategy.html
@@ -26,7 +26,7 @@
 
       <div class="content">
 
-        <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials. For AT&T employees, A web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store. Early results and customer feedback are positive!</p>
+        <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials. For AT&T employees, a web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store. Early results and customer feedback are positive!</p>
 
     </div>
 
