--- a/project-strategy.html
+++ b/project-strategy.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
+    <meta name="description" content="Portfolio of recent projects">
+    <meta name="author" content="Matt Scaggs">
     <title>Matt Scaggs: Portfolio</title>
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
