--- a/project-wbts.html
+++ b/project-wbts.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
+    <meta name="description" content="Portfolio of recent projects">
+    <meta name="author" content="Matt Scaggs">
     <title>Matt Scaggs: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
