--- a/project-wbts.html
+++ b/project-wbts.html
@@ -6,9 +6,6 @@
     <meta name="description" content="Portfolio of recent projects">
     <meta name="author" content="Matt Scaggs">
     <title>Matt Scaggs: Portfolio</title>
-
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
@@ -30,8 +27,6 @@
         <img class="img-responsive" src="img/wbtGroup.png">
     </div>
 
-    <footer>
-      <!-- <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p> -->
-    </footer>
+    <footer>2015</footer>
   </body>
 </html>
