--- a/project-strategy.html
+++ b/project-strategy.html
@@ -9,7 +9,6 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
-
     <script async src="js/perfmatters.js"></script>
   </head>
 
@@ -18,20 +17,15 @@
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Matt Scaggs<br><span>Instructional Designer</span></p>
     </header>
-
+    
     <div class="container">
       <div class="hero">
         Partnered with <a href="https://www.goenjoy.com/">Enjoy</a> on the approach for onboarding and continuation training for their employeees, plus preparing AT&T employees to support the launch.
       </div>
-
       <div class="content">
-
         <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials. For AT&T employees, a web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store. Early results and customer feedback are positive!</p>
-
+      </div>
     </div>
-
-    <footer>
-      <!-- <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p> -->
-    </footer>
+    <footer>2015</footer>
   </body>
 </html>
