--- a/project-strategy.html
+++ b/project-strategy.html
@@ -23,9 +23,10 @@
         Partnered with <a href="https://www.goenjoy.com/">Enjoy</a> on the approach for onboarding and continuation training for their employeees, plus preparing AT&T employees to support the launch.
       </div>
       <div class="content">
-        <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials. For AT&T employees, a web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store. Early results and customer feedback are positive!</p>
+        <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials.</p> 
+        <p></p>For AT&T employees, a web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store. Early results and customer feedback are positive!</p>
       </div>
     </div>
-    <footer>2015</footer>
+    <footer></footer>
   </body>
 </html>
