--- a/project-wbts.html
+++ b/project-wbts.html
@@ -27,6 +27,6 @@
         <img class="img-responsive" src="img/wbtGroup.png">
     </div>
 
-    <footer>2015</footer>
+    <footer></footer>
   </body>
 </html>
