--- a/project-ops.html
+++ b/project-ops.html
@@ -25,22 +25,16 @@
       <div class="hero">
         I led a team in designing and deploying the first paperless classroom training for 40,000 frontline retail employees.
       </div>
-
       <div class="content">
-
         <p>This one day workshop drove up to 15% increases in product sales and customer satisfaction scores, when comparing employees completing the course to those who did not. Learners enjoyed a mix of activities: hands-on discovery, guided group interactions, and practice sessions with instructor coaching and feedback.</p>
-
         <p>The project team included <a href="http://www.linkedin.com/pub/matt-yantzi/97/247/a17">Matt Yantzi</a>, <a href="http://www.linkedin.com/pub/jay-fallon/8/571/b">Jay Fallon</a>, <a href="http://www.linkedin.com/pub/rich-spohnholz/9/8a0/801">Rich Spohnholz</a>, <a href="http://www.linkedin.com/pub/patrick-neff/73/274/343">Patrick Neff</a>, 60+ trainers covering all 50 states, along with executive sponsors and stakeholders from AT&T’s Marketing, Sales Operations and Emerging Devices organizations.
-
         <p>We used Adobe tools to design, develop and deliver the content to iPads and Android tablets. As shown in the sample screens below, we also had fun including game-like elements and achievements to increase employee engagement with the material.</p>
-
         <img class="img-responsive" src="img/opsPic1.png"><br><br>
         <img class="img-responsive" src="img/opsPic2.png"><br><br>
         <img class="img-responsive" src="img/opsPic3.png"><br><br>
+      </div>
     </div>
-
     <footer>
-      <!-- <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p> -->
     </footer>
   </body>
 </html>
