--- a/project-ops.html
+++ b/project-ops.html
@@ -31,7 +31,7 @@
         <p>We used Adobe tools to design, develop and deliver the content to iPads and Android tablets. As shown in the sample screens below, we also had fun including game-like elements and achievements to increase employee engagement with the material.</p>
         <img class="img-responsive" src="img/opsPic1.png"><br><br>
         <img class="img-responsive" src="img/opsPic2.png"><br><br>
-        <img class="img-responsive" src="img/opsPic3.png"><br><br>
+        <img class="img-responsive" src="img/opsPic3.png">
       </div>
     </div>
     <footer>
