update contact info

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="container">
       <div class="hero">
-        <strong>I love designing and developing courses that help people perform better at work!</strong> Here are some of the things I've been working on recently. Thanks for taking a look.<br><br> Please feel free to contact me at: matt dot scaggs at gmail dot com
+        <strong>I love designing and developing courses that help people perform better at work!</strong> Here are some of the things I've been working on recently. Thanks for taking a look.<br>
       </div>
 
       <div class="content">
@@ -77,9 +77,10 @@
     </div>
 
     <footer>
-      <!-- <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p> -->
-      <!-- shifted font to footer -->
-      <!-- using WebFontLoader, doc: https://github.com/typekit/webfontloader -->
+      <div class="hero">
+      Reach me: <a href="https://www.linkedin.com/in/mattscaggs"></a>LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a>
+      <!-- <br> Please feel free to contact me at: matt dot scaggs at gmail dot com -->
+      </div>
     </footer>
   </body>
 </html>
