--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
     </div>
 
     <footer>
-      <div class="hero">
-      Reach me: <a href="https://www.linkedin.com/in/mattscaggs"></a>LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a>
-      <!-- <br> Please feel free to contact me at: matt dot scaggs at gmail dot com -->
+      <div>
+      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | matt dot scaggs at gmail dot com
       </div>
     </footer>
   </body>
