--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     </div>
 
     <footer>
-      <div>
-      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | matt dot scaggs at gmail dot com
+      <div><br>
+      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | matt dot scaggs at gmail dot com<br>
       </div>
     </footer>
   </body>
