--- a/project-strategy.html
+++ b/project-strategy.html
@@ -24,7 +24,8 @@
       </div>
       <div class="content">
         <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials.</p> 
-        <p></p>For AT&T employees, a web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store. Early results and customer feedback are positive!</p>
+        <p>For AT&T employees, a web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store.</p>
+        <p>Early results and customer feedback are positive!</p>
       </div>
     </div>
     <footer></footer>
