update ops image, footer spacing

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <footer>
       <div><br>
-      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | matt dot scaggs at gmail dot com<br>
+      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | matt dot scaggs at gmail dot com<br><br>
       </div>
     </footer>
   </body>
