--- a/project-strategy.html
+++ b/project-strategy.html
@@ -17,17 +17,17 @@
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Matt Scaggs<br><span>Instructional Designer</span></p>
     </header>
-    
+
     <div class="container">
       <div class="hero">
         Partnered with <a href="https://www.goenjoy.com/">Enjoy</a> on the approach for onboarding and continuation training for their employeees, plus preparing AT&T employees to support the launch.
       </div>
       <div class="content">
-        <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials.</p> 
+        <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials.</p>
         <p>For AT&T employees, a web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store.</p>
         <p>Early results and customer feedback are positive!</p>
       </div>
     </div>
-    <footer></footer>
+    <footer><br><br></footer>
   </body>
 </html>
