update contact, eLearning tagline

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li>
             <img src="img/wbtMain_200.png">
             <a href="project-wbts.html">eLearning</a>
-            <p>Recent web based training courses developed and deployed for mobile and desktop users.</p>
+            <p>Recent web based training courses developed and deployed for 40,000 employees to access from tablets or PCs.</p>
           </li>
 
           <li>
@@ -78,7 +78,7 @@
 
     <footer>
       <div><br>
-      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | matt dot scaggs at gmail dot com<br><br>
+      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | matt dot scaggs at me dot com<br><br>
       </div>
     </footer>
   </body>
