--- a/project-wbts.html
+++ b/project-wbts.html
@@ -24,7 +24,7 @@
 
       <div class="content">
         <p>Our audience consists of sales consultants, support reps, and line managers from internal and external retail channels: Company Owned Retail, Dealer, and National Retail. Courses are designed and developed in partnership with stakeholders from the field, marketing, sales operations, and OEMs.</p>
-        <img class="img-responsive" src="img/wbtGroup.png">
+        <img class="img-responsive" src="img/wbtGroup.jpg">
     </div>
 
     <footer><br><br></footer>
