fix email addy in reach me

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <footer>
       <div><br>
-      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | matt dot scaggs at me dot com<br><br>
+      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | mattscaggs at me dot com<br><br>
       </div>
     </footer>
   </body>
