--- a/project-ops.html
+++ b/project-ops.html
@@ -27,9 +27,7 @@
       <p>Matt Scaggs<br><span>Instructional Designer</span></p>
     </header>
 
-    <div class="navigation">
-      <a href="/">Home</a> > Offering Personalized Solutions
-    </div>
+    <div class="nav"><a href="/">Home</a> > Offering Personalized Solutions</div>
     <div class="container">
       <div class="hero">
         In 2012, I led a team in designing and developing the first paperless leader led course at AT&T, delivered to 40K+ frontline retail employees.
