--- a/project-ops.html
+++ b/project-ops.html
@@ -24,11 +24,11 @@
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Matt Scaggs<br><span>Instructional Designer</span></p>
+      <p>Matt Scaggs<br><span>Design & Development</span></p>
     </header>
     
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > Offering Personalized Solutions</div>  
+      <div class="nav"><a href="/">Home</a> > Offering Personalized Solutions<br></div>  
       <div class="hero">
         In 2012, I led a team in designing and developing the first paperless leader led course at AT&T, delivered to 40K+ frontline retail employees.
       </div>
@@ -39,7 +39,8 @@
         <img class="img-responsive" src="img/opsPeople.jpg"><br>
       </div>
     </div>
-    <footer><br><br>
+    <footer>
+      <br>Want to learn more? Please reach out: <a href="tel:1-801-686-8080">Phone</a> | <a href="mailto:mattscaggs@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a><br>
     </footer>
   </body>
 </html>
