--- a/project-ops.html
+++ b/project-ops.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <footer>
-      <br>Want to learn more? Please reach out: <a href="tel:1-801-686-8080">Phone</a> | <a href="mailto:mattscaggs@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a><br>
+      Want to learn more? Please reach out: <a href="tel:1-801-686-8080">Phone</a> | <a href="mailto:mattscaggs@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a><br><br>
     </footer>
   </body>
 </html>
