--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Matt Scaggs<br><span>Instructional Designer</span></p>
+      <p>Matt Scaggs<br><span>Design & Development</span></p>
     </header>
 
     <div class="container">
       <div class="hero">
-        <strong>I love designing and developing courses that help people perform better at work!</strong> Here are some of the things I've been working on recently. Thanks for taking a look.<br>
+        <strong>I love helping people learn & perform better:</strong> how to use a new product, complete a new process, navigate a system update, or dive into an entirely new job. Here are some highlights from past projects. Thanks for looking and feel free to <a hre="mailto:mattscaggs@gmail.com">ping</a><br>
       </div>
 
       <div class="content">
@@ -58,7 +58,7 @@
 
     <footer>
       <div><br>
-      Reach me: <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a> | <a href="https://twitter.com/mattscaggs">Twitter</a> | mattscaggs at me dot com<br><br>
+      Reach me: <a href="tel:1-801-686-8080">Phone</a> | <a href="mailto:mattscaggs@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a><br><br>
       </div>
     </footer>
   </body>
