--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
       <div class="hero">
-        <strong>I love helping people learn & perform better:</strong> how to use a new product, complete a new process, navigate a system update, or dive into an entirely new job. Here are some highlights from past projects. Thanks for looking and feel free to <a hre="mailto:mattscaggs@gmail.com">ping</a><br>
+        <strong>I love helping people learn & perform better:</strong> how to use a new product, complete a new process, navigate a system update, or dive into an entirely new job. Here are some highlights from past projects. Thanks for looking and feel free to <a hre="mailto:mattscaggs@gmail.com">ping</a>.<br>
       </div>
 
       <div class="content">
