--- a/index.html
+++ b/index.html
@@ -24,31 +24,37 @@
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Matt Scaggs<br><span>Design & Development</span></p>
+      <p>Matt Scaggs<br><span>Design &amp; Development</span></p>
     </header>
 
     <div class="container">
       <div class="hero">
-        <strong>I love helping people learn & perform better:</strong> how to use a new product, complete a new process, navigate a system update, or dive into an entirely new job. Here are some highlights from past projects. Thanks for looking and feel free to <a hre="mailto:mattscaggs@gmail.com">ping</a>.<br>
+        <strong>I love helping people learn &amp; perform better:</strong> how to use a new product, complete a new process, navigate a system update, or dive into an entirely new job. Here are some highlights from past projects. Thanks for looking and feel free to <a href="mailto:mattscaggs@gmail.com">ping</a>.<br>
       </div>
 
       <div class="content">
         <ul>
 
           <li>
-            <img src="img/enjoyLogo.png">
+            <a href="project-devsppt.html"><img src="img/devsppt_200.jpg"></a>
+            <a href="project-devsppt.html">Device Support</a>
+            <p>Served as product manager collaborating across content, design and development teams to help customers learn how to use their devices.</p>
+          </li>
+        
+          <li>
+            <a href="project-strategy.html"><img src="img/enjoyLogo.png"></a>
             <a href="project-strategy.html">Training Strategy</a>
             <p>Partnered with Enjoy on the approach for onboarding and continuation training for their employeees.</p>
           </li>
 
           <li>
-            <img src="img/wbtMain_200.png">
+            <a href="project-wbts.html"><img src="img/wbtMain_200.png"></a>
             <a href="project-wbts.html">eLearning</a>
             <p>Recent web based training courses developed and deployed for 40,000 employees to access from tablets or PCs.</p>
           </li>
 
           <li>
-            <img src="img/opsPic2_200.png">
+            <a href="project-ops.html"><img src="img/opsPic2_200.png"></a>
             <a href="project-ops.html">Offering Personalized Solutions</a>
             <p>Led a cross functional team in designing and deploying the first paperless classroom training for 40,000 frontline retail employees.</p>
           </li>
@@ -57,7 +63,7 @@
     </div>
 
     <footer>
-      <div><br>
+      <div>
       Reach me: <a href="tel:1-801-686-8080">Phone</a> | <a href="mailto:mattscaggs@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a><br><br>
       </div>
     </footer>
