--- a/project-strategy.html
+++ b/project-strategy.html
@@ -24,19 +24,21 @@
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Matt Scaggs<br><span>Instructional Designer</span></p>
+      <p>Matt Scaggs<br><span>Design &amp; Development</span></p>
     </header>
 
     <div class="container">
+      <div class="nav"><a href="/">Home</a> > Training Strategy<br><br></div>      
       <div class="hero">
-        Partnered with <a href="https://www.goenjoy.com/">Enjoy</a> on the approach for onboarding and continuation training for their employeees, plus preparing AT&T employees to support the launch.
+        In late 2014 &amp early 2015, I partnered with <a href="https://www.goenjoy.com/">Enjoy</a> on the initial strategy for onboarding and continuation training to support their launch as a start-up.
       </div>
       <div class="content">
-        <p>Together we developed and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials.</p>
-        <p>For AT&T employees, a web based course and performance support were created to introduce Enjoy, their service, and processes to support them in store.</p>
-        <p>Early results and customer feedback are positive!</p>
+        <p>Together we aligned on and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials. For AT&ampT employees, a web-based course and performance support were created to introduce Enjoy, their service, and processes to support them in store.</p>
+        <p>Pilot results and customer feedback were positive and Enjoy has remained partnered with AT&T and expanded to additional markets in the years since then.</p>
       </div>
     </div>
-    <footer><br><br></footer>
+    <footer>
+      Want to learn more? Please reach out: <a href="tel:1-801-686-8080">Phone</a> | <a href="mailto:mattscaggs@gmail.com">Email</a> | <a href="https://www.linkedin.com/in/mattscaggs">LinkedIn</a><br><br>
+    </footer>
   </body>
 </html>
