--- a/project-ops.html
+++ b/project-ops.html
@@ -28,7 +28,7 @@
     </header>
     
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > Offering Personalized Solutions<br></div>  
+      <div class="nav"><a href="/">Home</a> > Offering Personalized Solutions<br><br></div>  
       <div class="hero">
         In 2012, I led a team in designing and developing the first paperless leader led course at AT&T, delivered to 40K+ frontline retail employees.
       </div>
