--- a/project-devsppt.html
+++ b/project-devsppt.html
@@ -33,6 +33,7 @@
         Since 2016, I've worked as an ecommerce product manager in the online support space, primarily focused on helping customers learn how to use their latest mobile device.
       </div>
       <div class="content">
+        <p>I've focused on growing customer use of online support solutions by understanding and addressing their needs, improving usability, and monitoring feedback and usage patterns. Site enhancements are delivered in partnership with UX design and agile development teams. I'm also involved in content strategy and management, including overseeing writers, SMEs, and vendors content production efforts, and coordinating with producers and delivery teams to deploy content.</p>
         <p>The Device Support ecosystem supports customers and call center agents with:<br>
         - searchable content like step-by-step tutorials, videos, and user guides<br>
         - workflows to troubleshoot and resolve network, account, hardware, software, or other issues<br>
