--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li>
             <a href="project-wbts.html"><img src="img/wbtMain_200.png"></a>
             <a href="project-wbts.html">eLearning</a>
-            <p>Recent web based training courses developed and deployed for 40,000 employees to access from tablets or PCs.</p>
+            <p>Designed, developed and deployed web-based courses for employees to access from tablets or PCs.</p>
           </li>
 
           <li>
