--- a/project-ops.html
+++ b/project-ops.html
@@ -24,17 +24,17 @@
   <body>
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Matt Scaggs<br><span>Design & Development</span></p>
+      <p>Matt Scaggs<br><span>Design &amp; Development</span></p>
     </header>
     
     <div class="container">
       <div class="nav"><a href="/">Home</a> > Offering Personalized Solutions<br><br></div>  
       <div class="hero">
-        In 2012, I led a team in designing and developing the first paperless leader led course at AT&T, delivered to 40K+ frontline retail employees.
+        In 2012, I led a team in designing and developing the first paperless leader led course at AT&amp;T, delivered to 40K+ frontline retail employees.
       </div>
       <div class="content">
-        <p>This one-day workshop drove up to 15% increases in product sales and customer satisfaction scores, when comparing employees completing the course to those who did not. Learners enjoyed a mix of activities: hands-on discovery, guided group interactions, and practice sessions with instructor coaching and feedback.</p>
-        <p>The project team included <a href="http://www.linkedin.com/pub/matt-yantzi/97/247/a17">Matt Yantzi</a>, <a href="http://www.linkedin.com/pub/jay-fallon/8/571/b">Jay Fallon</a>, <a href="http://www.linkedin.com/pub/rich-spohnholz/9/8a0/801">Rich Spohnholz</a>, <a href="http://www.linkedin.com/pub/patrick-neff/73/274/343">Patrick Neff</a>, 60+ trainers covering all 50 states, along with executive sponsors and stakeholders from AT&T’s marketing, sales operations and emerging devices organizations.
+        <p>This workshop drove up to 15% increases in product sales and customer satisfaction scores, when comparing employees completing the course to those who did not. Learners enjoyed a mix of activities: hands-on discovery, guided group interactions, and practice sessions with instructor coaching and feedback.</p>
+        <p>The project team included <a href="http://www.linkedin.com/pub/matt-yantzi/97/247/a17">Matt Yantzi</a>, <a href="http://www.linkedin.com/pub/jay-fallon/8/571/b">Jay Fallon</a>, <a href="http://www.linkedin.com/pub/rich-spohnholz/9/8a0/801">Rich Spohnholz</a>, <a href="http://www.linkedin.com/pub/patrick-neff/73/274/343">Patrick Neff</a>, 60+ trainers covering all 50 states, along with executive sponsors and stakeholders from marketing, sales operations and emerging devices organizations.
         <p>We used Adobe tools to design, develop and deliver the content to iPads and Android tablets. As shown in the sample screens below, we also had fun including game-like elements and achievements to increase employee engagement with the material.</p>
         <img class="img-responsive" src="img/opsPeople.jpg"><br>
       </div>
