--- a/project-strategy.html
+++ b/project-strategy.html
@@ -35,7 +35,7 @@
       <div class="content">
       	<p>Enjoy was launched to bridge the gap between retail and ecommerce. When customers in supported markets order online, they can choose to have an Enjoy expert hand deliver their order and help them with set up.</p>
         <p>Together we aligned on and deployed a blended learning plan for Enjoy employees, with instructor led workshops, eLearning, and performance support materials. For AT&ampT employees, a web-based course and performance support were created to introduce Enjoy, their service, and processes to support them in store.</p>
-        <p>Pilot results and customer feedback were positive and Enjoy has remained partnered with AT&T and expanded to additional markets in the years since then.</p>
+        <p>Pilot results and customer feedback were positive and Enjoy has remained partnered with AT&amp;T and expanded to additional markets in the years since.</p>
       </div>
     </div>
     <footer>
