--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li>
             <a href="project-devsppt.html"><img src="img/devsppt_200.jpg"></a>
             <a href="project-devsppt.html">Device Support</a>
-            <p>Served as product manager collaborating across content, design and development teams to help customers learn how to use their devices.</p>
+            <p>Product manager collaborating across content, design and development teams to help customers with their devices.</p>
           </li>
         
           <li>
@@ -56,7 +56,7 @@
           <li>
             <a href="project-ops.html"><img src="img/opsPic2_200.png"></a>
             <a href="project-ops.html">Offering Personalized Solutions</a>
-            <p>Led a cross functional team in designing and deploying the first paperless classroom training for 40,000 frontline retail employees.</p>
+            <p>Led a team in designing the first paperless classroom training for the org.</p>
           </li>
 
         </ul>
