Nav update & add ILT page

--- a/project-strategy.html
+++ b/project-strategy.html
@@ -28,7 +28,7 @@
     </header>
 
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > Training Strategy<br><br></div>      
+      <div class="nav"><a href="/">Home</a> > Training Strategy<br></div>      
       <div class="hero">
         In late 2014 &amp early 2015, I partnered with <a href="https://www.goenjoy.com/">Enjoy</a> on the initial strategy for onboarding and continuation training to support their launch as a start-up.
       </div>
