--- a/project-wbts.html
+++ b/project-wbts.html
@@ -28,7 +28,7 @@
     </header>
 
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > eLearning<br><br></div>  
+      <div class="nav"><a href="/">Home</a> > eLearning<br></div>  
       <div class="hero">
       	From 2009 to 2015, I worked on a number of eLearning and mLearning courses. Many of these self-paced courses focused on introducing new products to 40K+ retail employees via multiple platforms.
       </div>
