--- a/project-4gSpeed.html
+++ b/project-4gSpeed.html
@@ -28,7 +28,7 @@
     </header>
     
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > 4G Speedway<br><br></div>  
+      <div class="nav"><a href="/">Home</a> > 4G Speedway<br></div>  
       <div class="hero">
         In 2011, I led learning and development efforts to introduce 4G technology to AT&amp;T's retail sales team. Depending on their location, learners participated in person at event spaces, on live virtual sessions, or remotely via recorded or web-based versions.
       </div>
