--- a/project-devsppt.html
+++ b/project-devsppt.html
@@ -28,7 +28,7 @@
     </header>
     
     <div class="container">
-      <div class="nav"><a href="/">Home</a> > Device Support<br><br></div>  
+      <div class="nav"><a href="/">Home</a> > Device Support<br></div>  
       <div class="hero">
         Since 2016, I've worked as an ecommerce product manager in the online support space, primarily focused on helping customers learn how to use their latest mobile device.
       </div>
